Revert users-access-check to AdvancesPage
